# mqrestt

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Makefile.am  README.md  bordeaux-mqtt-bridge.ini  configure.ac  mqrestt.conf  mqrestt.ini
debian/: changelog  control  mqrestt.install  mqrestt.service
doc/: arc.asciio  mqrestt.conf  simple_mqtt2rest.asciio  simple_mqtt2rest__mqrestt.conf
man/: Makefile.am  generate.sh  mqrestt.asciidoc  mqrestt.md
src/: CMakeLists.txt  Makefile.am  configuration.c  configuration.h  logging.c  logging.h  main.c  mqrestt_unit.c  mqrestt_unit.h  mqtt2rest_unit.c  mqtt2rest_unit.h  mqtt_client.c  mqtt_client.h  mqtt_curl.c  mqtt_curl.h  rest2mqtt_unit.c  rest2mqtt_unit.h  utils.c  utils.h
tools/: debian_release.sh  post_rest.sh  send_entryevent.sh  send_offline.sh  send_online.sh  send_product1.sh
